--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,6 +174,10 @@ input, select, textarea {
 		margin: 0 0 2em 0;
 	}
 
+	#add-margin-bottom {
+		margin: 0 0 2em 0 !important;
+	}
+
 	h1, h2, h3, h4, h5, h6 {
 		color: #ffffff;
 		font-weight: bold;
