--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3946,3 +3946,9 @@ input, select, textarea {
 .buttons a:nth-child(1){
 	margin-left: 0px;
 }
+
+@media(max-width: 767px) {
+  a.button {
+    font-size: 0.6em !important;
+  }
+}
