--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2013,10 +2013,21 @@ input, select, textarea {
 		background: rgba(255, 255, 255, 0.05);
 		margin: 0 0 2em 0;
 	}
+		@media(max-width: 2299px) {
+			.features section {
+				width: 50%;
+			}
+		}
+
+		@media(min-width: 2300px) {
+			.features section {
+				width: 33%;
+			}
+		}
 
 		.features section {
 			padding: 3.5em 3em 1em 7em ;
-			width: 50%;
+			/* width: 50%; */
 			border-top: solid 1px rgba(255, 255, 255, 0.15);
 			position: relative;
 		}
@@ -3227,7 +3238,7 @@ input, select, textarea {
 		.wrapper > .inner {
 			padding: 5em 5em 3em 5em ;
 			max-width: 100%;
-			width: 75em;
+			/* width: 75em; */
 		}
 
 			@media screen and (max-width: 1680px) {
